--- a/Famoser.ETHZMensa.Presentation.WinUniversal/Pages/MensaPage.xaml
+++ b/Famoser.ETHZMensa.Presentation.WinUniversal/Pages/MensaPage.xaml
@@ -13,8 +13,8 @@
                 <StackPanel>
                     <TextBlock Style="{StaticResource BigTexBlock}" Padding="10,10,10,0" Text="{Binding Title}" Foreground="{ThemeResource ApplicationPageBackgroundThemeBrush}" />
                     <TextBlock Style="{StaticResource SecondaryBigTexBlock}" Typography.Capitals="SmallCaps"  Text="{Binding MenuName}" Foreground="{ThemeResource ApplicationPageBackgroundThemeBrush}" />
-                    <TextBlock Style="{StaticResource SecondaryTexBlock}" Text="{Binding Description}" Foreground="{ThemeResource ApplicationPageBackgroundThemeBrush}" />
-                    <TextBlock Style="{StaticResource SecondaryTexBlock}" Text="{Binding Prices}" Foreground="{ThemeResource ApplicationPageBackgroundThemeBrush}" />
+                    <TextBlock Style="{StaticResource SecondaryTexBlock}" Text="{Binding Description}" Visibility="{Binding Description, Converter={StaticResource StringToVisibilityConverter}}" Foreground="{ThemeResource ApplicationPageBackgroundThemeBrush}" />
+                    <TextBlock Style="{StaticResource SecondaryTexBlock}" Text="{Binding Prices}" Visibility="{Binding Prices, Converter={StaticResource StringToVisibilityConverter}}" Foreground="{ThemeResource ApplicationPageBackgroundThemeBrush}" />
                 </StackPanel>
             </Grid>
         </DataTemplate>
