aded UZH, progressbar

--- a/Famoser.ETHZMensa.Presentation.WinUniversal/App.xaml
+++ b/Famoser.ETHZMensa.Presentation.WinUniversal/App.xaml
@@ -12,6 +12,7 @@
             <viewModel:ViewModelLocator x:Key="Locator" />
             
 <converters:StringToVisibilityConverter x:Key="StringToVisibilityConverter" />
+            <converters:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
 
             <Style x:Key="StretchListViewItemStyle" TargetType="ListViewItem">
                 <Setter Property="HorizontalContentAlignment" Value="Stretch" />
