--- a/Famoser.ETHZMensa.Presentation.WinUniversal/Pages/MainPage.xaml
+++ b/Famoser.ETHZMensa.Presentation.WinUniversal/Pages/MainPage.xaml
@@ -50,7 +50,8 @@
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
-                <TextBlock Text="{Binding SelectedLocation.Name}" Style="{StaticResource BigTexBlock}" />
+                <TextBlock Grid.Row="0" Text="{Binding SelectedLocation.Name}" Style="{StaticResource BigTexBlock}" />
+                <ProgressBar Grid.Row="0" Visibility="{Binding ProgressViewModel.ShowProgress, Source={StaticResource Locator}, Converter={StaticResource BooleanToVisibilityConverter}}" Value="{Binding ProgressViewModel.ActiveProgress, Source={StaticResource Locator}}" VerticalAlignment="Top" Maximum="{Binding ProgressViewModel.MaxProgress, Source={StaticResource Locator}}" Minimum="0" IsIndeterminate="False"/>
                 <ListView Grid.Row="1" ItemTemplate="{StaticResource MensaDataTemplate}" ItemContainerStyle="{StaticResource StretchListViewItemStyle}" IsItemClickEnabled="True" ItemsSource="{Binding SelectedLocation.Mensas}" ItemClick="ListView_ItemClick" />
             </Grid>
         </SplitView.Content>
