--- a/Famoser.ETHZMensa.Presentation.WinUniversal/Pages/MensaPage.xaml
+++ b/Famoser.ETHZMensa.Presentation.WinUniversal/Pages/MensaPage.xaml
@@ -29,6 +29,10 @@
         </Grid.RowDefinitions>
         <TextBlock Text="{Binding Mensa.Name}" Style="{StaticResource BigTexBlock}" />
         <TextBlock Grid.Row="1" Text="{Binding Mensa.MealTime}" Style="{StaticResource SecondaryBigTexBlock}" />
+        <TextBlock Grid.Row="2" VerticalAlignment="Bottom" Style="{StaticResource SecondaryBigTexBlock}" >
+            <Run Text="refreshed:" />
+            <Run Text="{Binding Mensa.LastTimeRefreshed, Converter={StaticResource DateTimeToStringConverter}}" />
+        </TextBlock>
         <ListView Grid.Row="2" ItemTemplate="{StaticResource MenuDataTemplate}" ItemContainerStyle="{StaticResource StretchListViewItemStyle}" IsItemClickEnabled="True" ItemsSource="{Binding Mensa.Menus}" />
         <TextBlock Grid.Row="3"  Padding="10">    
                 <Hyperlink NavigateUri="{Binding Mensa.InfoUrl}">
