--- a/Famoser.ETHZMensa.Presentation.WinUniversal/App.xaml
+++ b/Famoser.ETHZMensa.Presentation.WinUniversal/App.xaml
@@ -14,6 +14,7 @@
 <converters:StringToVisibilityConverter x:Key="StringToVisibilityConverter" />
             <converters:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
             <converters:DateTimeToStringConverter x:Key="DateTimeToStringConverter" />
+            <converters:FavoriteToSymbolConverter x:Key="FavoriteToSymbolConverter" />
 
             <Style x:Key="StretchListViewItemStyle" TargetType="ListViewItem">
                 <Setter Property="HorizontalContentAlignment" Value="Stretch" />
@@ -56,6 +57,15 @@
                 <Setter Property="FontWeight" Value="Light" />
                 <Setter Property="TextWrapping" Value="Wrap" />
                 <Setter Property="Padding" Value="10,0,10,10" />
+            </Style>
+            
+            <Style x:Key="FavoriteSymbolIcon" TargetType="SymbolIcon">
+                <Setter Property="Foreground" Value="{ThemeResource SystemControlBackgroundAccentBrush}" />
+            </Style>
+            
+            <Style x:Key="FlatButton" TargetType="Button">
+                <Setter Property="VerticalAlignment" Value="Stretch" />
+                <Setter Property="Background" Value="Transparent" />
             </Style>
         </ResourceDictionary>
     </Application.Resources>
