--- a/Famoser.ETHZMensa.Presentation.WinUniversal/Pages/MainPage.xaml
+++ b/Famoser.ETHZMensa.Presentation.WinUniversal/Pages/MainPage.xaml
@@ -16,6 +16,7 @@
         <DataTemplate x:Key="MensaDataTemplate">
             <Grid Background="{ThemeResource SystemControlBackgroundAccentBrush}">
                 <TextBlock Grid.Column="0" Style="{StaticResource BigTexBlock}" Text="{Binding Name}" Foreground="{ThemeResource ApplicationPageBackgroundThemeBrush}" />
+                <SymbolIcon Symbol="SolidStar" Foreground="White" Margin="10" HorizontalAlignment="Right" Visibility="{Binding IsFavorite, Converter={StaticResource BooleanToVisibilityConverter}}" />
             </Grid>
         </DataTemplate>
     </Page.Resources>
@@ -27,7 +28,7 @@
             <ScrollViewer VerticalScrollBarVisibility="Hidden" VerticalScrollMode="Enabled">
                 <ScrollViewer VerticalScrollBarVisibility="Hidden" VerticalScrollMode="Enabled" HorizontalScrollMode="Disabled">
                     <StackPanel>
-                        <ListView ScrollViewer.VerticalScrollMode="Disabled"  ItemClick="ListViewBase_OnItemClick" IsItemClickEnabled="True" SelectedItem="{Binding SelectedLocation, Mode=TwoWay}" ItemContainerStyle="{StaticResource StretchListViewItemStyle}"  ItemTemplate="{StaticResource LocationDataTemplate}" ItemsSource="{Binding Locations}" />
+                        <ListView AllowDrop="True" CanDragItems="True" CanReorderItems="True"  ScrollViewer.VerticalScrollMode="Disabled" ItemClick="ListViewBase_OnItemClick" IsItemClickEnabled="True" SelectedItem="{Binding SelectedLocation, Mode=TwoWay}" ItemContainerStyle="{StaticResource StretchListViewItemStyle}"  ItemTemplate="{StaticResource LocationDataTemplate}" ItemsSource="{Binding Locations}" />
                         <TextBlock Margin="0,10,0,0" Style="{StaticResource SecondaryTexBlock}" Foreground="{ThemeResource ApplicationPageBackgroundThemeBrush}">
                             <Run Text="App erstellt von" />
                             <Hyperlink NavigateUri="http://famoser.ch" Foreground="{ThemeResource ApplicationPageBackgroundThemeBrush}">
@@ -51,8 +52,8 @@
                     <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
                 <TextBlock Grid.Row="0" Text="{Binding SelectedLocation.Name}" Style="{StaticResource BigTexBlock}" />
-                <ProgressBar Grid.Row="0" Visibility="{Binding ProgressViewModel.ShowProgress, Source={StaticResource Locator}, Converter={StaticResource BooleanToVisibilityConverter}}" Value="{Binding ProgressViewModel.ActiveProgress, Source={StaticResource Locator}}" VerticalAlignment="Top" Maximum="{Binding ProgressViewModel.MaxProgress, Source={StaticResource Locator}}" Minimum="0" IsIndeterminate="False"/>
-                <ListView Grid.Row="1" ItemTemplate="{StaticResource MensaDataTemplate}" ItemContainerStyle="{StaticResource StretchListViewItemStyle}" IsItemClickEnabled="True" ItemsSource="{Binding SelectedLocation.Mensas}" ItemClick="ListView_ItemClick" />
+                <ProgressBar Grid.Row="0" Visibility="{Binding ProgressViewModel.ShowProgress, Source={StaticResource Locator}, Converter={StaticResource BooleanToVisibilityConverter}}" Value="{Binding ProgressViewModel.ActiveProgress, Source={StaticResource Locator}, Mode=TwoWay}" VerticalAlignment="Top" Maximum="{Binding ProgressViewModel.MaxProgress, Source={StaticResource Locator}}" Minimum="0" IsIndeterminate="False"/>
+                <ListView Grid.Row="1" AllowDrop="True" CanDragItems="True" CanReorderItems="True" ItemTemplate="{StaticResource MensaDataTemplate}" ItemContainerStyle="{StaticResource StretchListViewItemStyle}" IsItemClickEnabled="True" ItemsSource="{Binding SelectedLocation.Mensas}" ItemClick="ListView_ItemClick" />
             </Grid>
         </SplitView.Content>
     </SplitView>
