--- a/Famoser.ETHZMensa.Presentation.WinUniversal/Pages/MainPage.xaml
+++ b/Famoser.ETHZMensa.Presentation.WinUniversal/Pages/MainPage.xaml
@@ -28,6 +28,9 @@
             <ScrollViewer VerticalScrollBarVisibility="Hidden" VerticalScrollMode="Enabled">
                 <ScrollViewer VerticalScrollBarVisibility="Hidden" VerticalScrollMode="Enabled" HorizontalScrollMode="Disabled">
                     <StackPanel>
+                        <Grid Margin="0,0,0,1" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" Visibility="{Binding Favorites.Mensas.Count, Converter={StaticResource IntToVisibilityConverter}}" Tapped="Favorites_Tapped" >
+                            <TextBlock Grid.Column="0" Style="{StaticResource BigTexBlock}" Text="{Binding Favorites.Name}" Foreground="{ThemeResource SystemControlBackgroundAccentBrush}" />
+                        </Grid>
                         <ListView AllowDrop="True" CanDragItems="True" CanReorderItems="True"  ScrollViewer.VerticalScrollMode="Disabled" ItemClick="ListViewBase_OnItemClick" IsItemClickEnabled="True" SelectedItem="{Binding SelectedLocation, Mode=TwoWay}" ItemContainerStyle="{StaticResource StretchListViewItemStyle}"  ItemTemplate="{StaticResource LocationDataTemplate}" ItemsSource="{Binding Locations}" />
                         <TextBlock Margin="0,10,0,0" Style="{StaticResource SecondaryTexBlock}" Foreground="{ThemeResource ApplicationPageBackgroundThemeBrush}">
                             <Run Text="App erstellt von" />
