--- a/Famoser.ETHZMensa.Presentation.WinUniversal/Pages/MensaPage.xaml
+++ b/Famoser.ETHZMensa.Presentation.WinUniversal/Pages/MensaPage.xaml
@@ -12,16 +12,11 @@
     DataContext="{Binding MensaViewModel, Source={StaticResource Locator}}">
     <Page.Resources>
         <DataTemplate x:Key="MenuDataTemplate">
-            <Grid Background="{ThemeResource SystemControlBackgroundAccentBrush}">
-                <interactivity:Interaction.Behaviors>
-                    <core:EventTriggerBehavior EventName="Holding">
-                        <actions:OpenMenuFlyoutAction />
-                    </core:EventTriggerBehavior>
-                </interactivity:Interaction.Behaviors>
+            <Grid Background="{ThemeResource SystemControlBackgroundAccentBrush}" Holding="Mensa_Holding" RightTapped="UIElement_OnRightTapped">
                 <FlyoutBase.AttachedFlyout>
                     <MenuFlyout>
                         <MenuFlyoutItem Text="copy to clipboard" 
-                         Command="{Binding CopyToClipboardCommand}" CommandParameter="{Binding }" />
+                         Command="{Binding MensaViewModel.CopyToClipboardCommand, Source={StaticResource Locator}}" CommandParameter="{Binding }" />
                     </MenuFlyout>
                 </FlyoutBase.AttachedFlyout>
                 <StackPanel>
@@ -44,18 +39,22 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="Auto" />
         </Grid.ColumnDefinitions>
         <TextBlock Grid.Column="0" Text="{Binding Mensa.Name}" Style="{StaticResource BigTexBlock}" />
-        <Button Command="{Binding ToggleFavoriteCommand}" Style="{StaticResource FlatButton}" Grid.Column="1" Grid.Row="0">
+        <Button Command="{Binding CopyToClipboardCommand}" CommandParameter="{Binding Mensa}" Style="{StaticResource FlatButton}" Grid.Column="1" Grid.Row="0">
+            <SymbolIcon Symbol="Copy" Style="{StaticResource FavoriteSymbolIcon}" />
+        </Button>
+        <Button Command="{Binding ToggleFavoriteCommand}" Style="{StaticResource FlatButton}" Grid.Column="2" Grid.Row="0">
             <SymbolIcon Symbol="{Binding Mensa.IsFavorite, Converter={StaticResource FavoriteToSymbolConverter}}" Style="{StaticResource FavoriteSymbolIcon}" />
         </Button>
-        <TextBlock Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="1" Text="{Binding Mensa.MealTime}" Style="{StaticResource SecondaryBigTexBlock}" />
-        <TextBlock Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="2" VerticalAlignment="Bottom" Style="{StaticResource SecondaryBigTexBlock}" >
+        <TextBlock Grid.Column="0" Grid.Row="1" Text="{Binding Mensa.MealTime}" Style="{StaticResource SecondaryBigTexBlock}" />
+        <TextBlock Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="2" VerticalAlignment="Bottom" Style="{StaticResource SecondaryBigTexBlock}" >
             <Run Text="refreshed:" />
             <Run Text="{Binding Mensa.LastTimeRefreshed, Converter={StaticResource DateTimeToStringConverter}}" />
         </TextBlock>
-        <ListView Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="2" ItemTemplate="{StaticResource MenuDataTemplate}" ItemContainerStyle="{StaticResource StretchListViewItemStyle}" IsItemClickEnabled="True" ItemsSource="{Binding Mensa.Menus}" />
-        <TextBlock Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="3"  Padding="10">    
+        <ListView Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="2" ItemTemplate="{StaticResource MenuDataTemplate}" ItemContainerStyle="{StaticResource StretchListViewItemStyle}" IsItemClickEnabled="True" ItemsSource="{Binding Mensa.Menus}" />
+        <TextBlock Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="3"  Padding="10">    
                 <Hyperlink NavigateUri="{Binding Mensa.InfoUrl}">
                     <Run Text="Mehr Informationen" />
                 </Hyperlink>
