--- a/Famoser.ETHZMensa.Presentation.WinUniversal/Pages/MensaPage.xaml
+++ b/Famoser.ETHZMensa.Presentation.WinUniversal/Pages/MensaPage.xaml
@@ -2,28 +2,49 @@
     x:Class="Famoser.ETHZMensa.Presentation.WinUniversal.Pages.MensaPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Famoser.ETHZMensa.Presentation.WinUniversal.Pages"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:interactivity="using:Microsoft.Xaml.Interactivity"
-    xmlns:core="using:Microsoft.Xaml.Interactions.Core"
     xmlns:actions="using:Famoser.ETHZMensa.Presentation.WinUniversal.Actions"
-    mc:Ignorable="d" 
-    DataContext="{Binding MensaViewModel, Source={StaticResource Locator}}">
+    xmlns:core="using:Microsoft.Xaml.Interactions.Core"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:interactivity="using:Microsoft.Xaml.Interactivity"
+    xmlns:local="using:Famoser.ETHZMensa.Presentation.WinUniversal.Pages"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    DataContext="{Binding MensaViewModel, Source={StaticResource Locator}}"
+    mc:Ignorable="d">
     <Page.Resources>
         <DataTemplate x:Key="MenuDataTemplate">
-            <Grid Background="{ThemeResource SystemControlBackgroundAccentBrush}" Holding="Mensa_Holding" RightTapped="UIElement_OnRightTapped">
+            <Grid
+                Background="{ThemeResource SystemControlBackgroundAccentBrush}"
+                Holding="Mensa_Holding"
+                RightTapped="UIElement_OnRightTapped">
                 <FlyoutBase.AttachedFlyout>
                     <MenuFlyout>
-                        <MenuFlyoutItem Text="copy to clipboard" 
-                         Command="{Binding MensaViewModel.CopyToClipboardCommand, Source={StaticResource Locator}}" CommandParameter="{Binding }" />
+                        <MenuFlyoutItem
+                            Command="{Binding MensaViewModel.CopyToClipboardCommand, Source={StaticResource Locator}}"
+                            CommandParameter="{Binding}"
+                            Text="copy to clipboard" />
                     </MenuFlyout>
                 </FlyoutBase.AttachedFlyout>
                 <StackPanel>
-                    <TextBlock Style="{StaticResource BigTexBlock}" Padding="10,10,10,0" Text="{Binding Title}" Foreground="{ThemeResource ApplicationPageBackgroundThemeBrush}" />
-                    <TextBlock Style="{StaticResource SecondaryBigTexBlock}" Typography.Capitals="SmallCaps"  Text="{Binding MenuName}" Foreground="{ThemeResource ApplicationPageBackgroundThemeBrush}" />
-                    <TextBlock Style="{StaticResource SecondaryTexBlock}" Text="{Binding Description}" Visibility="{Binding Description, Converter={StaticResource StringToVisibilityConverter}}" Foreground="{ThemeResource ApplicationPageBackgroundThemeBrush}" />
-                    <TextBlock Style="{StaticResource SecondaryTexBlock}" Text="{Binding Prices}" Visibility="{Binding Prices, Converter={StaticResource StringToVisibilityConverter}}" Foreground="{ThemeResource ApplicationPageBackgroundThemeBrush}" />
+                    <TextBlock
+                        Padding="10,10,10,0"
+                        Foreground="{ThemeResource ApplicationPageBackgroundThemeBrush}"
+                        Style="{StaticResource BigTexBlock}"
+                        Text="{Binding Title}" />
+                    <TextBlock
+                        Foreground="{ThemeResource ApplicationPageBackgroundThemeBrush}"
+                        Style="{StaticResource SecondaryBigTexBlock}"
+                        Text="{Binding MenuName}"
+                        Typography.Capitals="SmallCaps" />
+                    <TextBlock
+                        Foreground="{ThemeResource ApplicationPageBackgroundThemeBrush}"
+                        Style="{StaticResource SecondaryTexBlock}"
+                        Text="{Binding Description}"
+                        Visibility="{Binding Description, Converter={StaticResource StringToVisibilityConverter}}" />
+                    <TextBlock
+                        Foreground="{ThemeResource ApplicationPageBackgroundThemeBrush}"
+                        Style="{StaticResource SecondaryTexBlock}"
+                        Text="{Binding Prices}"
+                        Visibility="{Binding Prices, Converter={StaticResource StringToVisibilityConverter}}" />
                 </StackPanel>
             </Grid>
         </DataTemplate>
@@ -42,29 +63,69 @@
             <ColumnDefinition Width="Auto" />
             <ColumnDefinition Width="Auto" />
         </Grid.ColumnDefinitions>
-        <TextBlock Grid.Column="0" Text="{Binding Mensa.Name}" Style="{StaticResource BigTexBlock}" />
-        <Button Command="{Binding CopyToClipboardCommand}" CommandParameter="{Binding Mensa}" Style="{StaticResource FlatButton}" Grid.Column="1" Grid.Row="0">
-            <SymbolIcon Symbol="Copy" Style="{StaticResource FavoriteSymbolIcon}" />
+        <TextBlock
+            Grid.Column="0"
+            Style="{StaticResource BigTexBlock}"
+            Text="{Binding Mensa.Name}" />
+        <Button
+            Grid.Row="0"
+            Grid.Column="1"
+            Command="{Binding CopyToClipboardCommand}"
+            CommandParameter="{Binding Mensa}"
+            Style="{StaticResource FlatButton}">
+            <SymbolIcon Style="{StaticResource FavoriteSymbolIcon}" Symbol="Copy" />
         </Button>
-        <Button Command="{Binding ToggleFavoriteCommand}" Style="{StaticResource FlatButton}" Grid.Column="2" Grid.Row="0">
-            <SymbolIcon Symbol="{Binding Mensa.IsFavorite, Converter={StaticResource FavoriteToSymbolConverter}}" Style="{StaticResource FavoriteSymbolIcon}" />
+        <Button
+            Grid.Row="0"
+            Grid.Column="2"
+            Command="{Binding ToggleFavoriteCommand}"
+            Style="{StaticResource FlatButton}">
+            <SymbolIcon Style="{StaticResource FavoriteSymbolIcon}" Symbol="{Binding Mensa.IsFavorite, Converter={StaticResource FavoriteToSymbolConverter}}" />
         </Button>
-        <TextBlock Grid.Column="0" Grid.Row="1" Text="{Binding Mensa.MealTime}" Style="{StaticResource SecondaryBigTexBlock}" />
-        <TextBlock Text="no menu today" Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="2" VerticalAlignment="Center" HorizontalAlignment="Center" Style="{StaticResource SecondaryBigTexBlock}" />
-       
-        <ListView Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="2" ItemTemplate="{StaticResource MenuDataTemplate}" ItemContainerStyle="{StaticResource StretchListViewItemStyle}" IsItemClickEnabled="True" ItemsSource="{Binding Mensa.Menus}" />
-        <TextBlock Padding="10" Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="3" Style="{StaticResource SecondaryBigTexBlock}" >
+        <TextBlock
+            Grid.Row="1"
+            Grid.Column="0"
+            Style="{StaticResource SecondaryBigTexBlock}"
+            Text="{Binding Mensa.MealTime}" />
+        <TextBlock
+            Grid.Row="2"
+            Grid.Column="0"
+            Grid.ColumnSpan="3"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center"
+            Style="{StaticResource SecondaryBigTexBlock}"
+            Text="no menu today"
+            Visibility="{Binding Mensa.Menus.Count, Converter={StaticResource IntToVisibilityConverter}, ConverterParameter=invert}" />
+
+        <ListView
+            Grid.Row="2"
+            Grid.Column="0"
+            Grid.ColumnSpan="3"
+            IsItemClickEnabled="True"
+            ItemContainerStyle="{StaticResource StretchListViewItemStyle}"
+            ItemTemplate="{StaticResource MenuDataTemplate}"
+            ItemsSource="{Binding Mensa.Menus}" />
+        <TextBlock
+            Grid.Row="3"
+            Grid.Column="0"
+            Grid.ColumnSpan="3"
+            Padding="10"
+            Style="{StaticResource SecondaryBigTexBlock}">
             <Run Text="refreshed:" />
             <Run Text="{Binding Mensa.LastTimeRefreshed, Converter={StaticResource DateTimeToStringConverter}}" />
-        </TextBlock> 
-        <TextBlock Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="4"  Padding="10,0,10,10">    
-                <Hyperlink NavigateUri="{Binding Mensa.InfoUrl}">
-                    <Run Text="Mehr Informationen" />
-                </Hyperlink>
-                <Run Text=" / " />
-                <Hyperlink NavigateUri="{Binding Mensa.TodayMenuUrl}">
-                    <Run Text="Detailierter Menuplan" />
-                </Hyperlink>
+        </TextBlock>
+        <TextBlock
+            Grid.Row="4"
+            Grid.Column="0"
+            Grid.ColumnSpan="3"
+            Padding="10,0,10,10">
+            <Hyperlink NavigateUri="{Binding Mensa.InfoUrl}">
+                <Run Text="mensa online" />
+            </Hyperlink>
+            <Run Text=" / " />
+            <Hyperlink NavigateUri="{Binding Mensa.TodayMenuUrl}">
+                <Run Text="menu online" />
+            </Hyperlink>
         </TextBlock>
     </Grid>
 </Page>
